--- a/css/styles.css
+++ b/css/styles.css
@@ -897,27 +897,49 @@ button {
   letter-spacing: 0.03em;
 }
 
-.inputs .user-container+.user-container {
+.inputs .user-container + .user-container {
   margin-top: 10px;
 }
 
-.user-container input{
-  width: 100%;
-  padding: 11px 42px;
+.user-container{
+  display: block;
 
-   font-weight: 400;
-    font-size: 14px;
-    line-height: 1.14;
-
-  border: 1px solid var(--modal-input-border);
-    border-radius: 4px;
-
-  transition-duration: 250ms;
-  transition-property:  border;
-  animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+      font-weight: 400;
+      font-size: 12px;
+      line-height: 1.17;
+      color: var(--title-text-color);
+      letter-spacing: 0.01em;
+    
+      cursor: pointer;
 }
 
-.user-container input:focus {
+.user-input {
+  position: relative;
+}
+
+.user-item {
+  margin-top: 4px;
+
+    width: 100%;
+      padding: 11px 42px;
+
+    font-weight: 400;
+      font-size: 14px;
+      line-height: 1.14;
+    
+      border: 1px solid var(--modal-input-border);
+      border-radius: 4px;
+    
+      transition-duration: 250ms;
+      transition-property: border;
+      animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.user-item.textarea{
+  padding: 12px 16px;
+}
+
+.user-item:focus {
     outline: 0;
   outline-offset: 0;
   
@@ -925,36 +947,11 @@ button {
     cursor: pointer;
 }
 
-.user-container input:focus ~ .user-svg{
+.user-item:focus ~ .user-svg{
   cursor: pointer;
   fill: var(--accent-color);
  }
 
-/* .user-container:hover input{
-  cursor: pointer;
-}
-
-.user-container:hover .user-svg{
-  cursor: pointer;
-} */
-
- 
-.user-item{
-  display: inline-block;
-  margin-bottom: 4px;
-
-  font-weight: 400;
-    font-size: 12px;
-    line-height: 1.17;
-    color: var(--title-text-color);
-    letter-spacing: 0.01em;
-
-  cursor: pointer;
-}
-
-.user-input{
-  position: relative;
-}
 
 /* svg-modal */
 .svg-close{
@@ -962,14 +959,14 @@ button {
   margin: auto;
 }
 
-
 .user-svg{
   position: absolute;
  
   fill: var(--primary-text-color);
 
   left: 12px;
-    top: 50%;
+  top: 50%;
+ 
   transform: translateY(-50%);
 
   transition-duration: 250ms;
