--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@
   --icon-footer: rgba(255, 255, 255, 0.1);
   --accent-color: #2196f3;
   --icon-background-socials: #afb1b8;
-  --button-hero-shadow: (0px 4px 4px rgba(0, 0, 0, 0.15));
+  --button-hero-shadow: rgba(0, 0, 0, 0.15);
   --button-portfolio-shadow: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   --button-portfolio-shadow-active: 0px 3px 1px rgba(0, 0, 0, 0.1),
     0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -32,6 +32,7 @@
   --modal-input-border: rgba(33, 33, 33, 0.2);
   --modal-close: #000000;
   --modal-close-border:rgba(0, 0, 0, 0.1);
+  --placeholder-text: rgba(117, 117, 117, 0.5);
 }
 
 /* Base */
@@ -288,7 +289,7 @@ button {
   letter-spacing: 0.06em;
   color: var(--primary-background-color);
   background-color: var(--accent-color);
-  box-shadow: var(--button-hero-shadow);
+  box-shadow: 0px 4px 4px var(--button-hero-shadow);
 
 
     transition-duration: 250ms;
@@ -897,8 +898,11 @@ button {
   letter-spacing: 0.03em;
 }
 
+
+
 .inputs .user-container + .user-container {
   margin-top: 10px;
+
 }
 
 .user-container{
@@ -937,6 +941,16 @@ button {
 
 .user-item.textarea{
   padding: 12px 16px;
+  resize: none;
+  height: 138px;
+}
+
+.user-input textarea::placeholder{
+  font-weight: 400;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.01em;
+  color: var(--placeholder-text);
 }
 
 .user-item:focus {
@@ -951,6 +965,55 @@ button {
   cursor: pointer;
   fill: var(--accent-color);
  }
+
+.checkbox-label{
+  display: block;
+  margin-top: 20px;
+  margin-bottom: 30px;
+
+
+
+  font-weight: 400;
+    font-size: 14px;
+    line-height: 1.7;
+    letter-spacing: 0.03em;
+  color: var(--title-text-color);
+}
+
+.checkbox-label a {
+  color: var(--accent-color);
+   text-decoration: none;
+   border-bottom: 1px solid var(--accent-color);
+   display: inline-block;
+  line-height: 0.75;
+}
+
+.button.form-send{
+  display: block;
+  margin: 0 auto;
+  justify-content: center;
+  padding: 10px 55px 10px 56px;
+
+  font-weight: 700;
+    font-size: 16px;
+    line-height: 1.875;
+    letter-spacing: 0.06em;
+  
+    color: var(--primary-background-color);
+  background-color: var(--accent-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+ 
+        transition-duration: 250ms;
+          transition-property: background-color;
+          animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.button.form-send:hover,
+.button.form-send:focus{
+  background-color: var(--button-accent-color);
+}
 
 
 /* svg-modal */
