--- a/css/styles.css
+++ b/css/styles.css
@@ -967,12 +967,15 @@ button {
  }
 
 .checkbox-label{
-  display: block;
+  display: flex;
+    align-items: center;
+    justify-content: center;
+
+
   margin-top: 20px;
   margin-bottom: 30px;
 
-
-
+  text-align: center;
   font-weight: 400;
     font-size: 14px;
     line-height: 1.7;
@@ -980,12 +983,59 @@ button {
   color: var(--title-text-color);
 }
 
+.checkbox{
+    appearance: none;
+    position: absolute;
+
+
+}
+
+/* .checkbox:checked + .checkbox-icon {
+  background-color: var(--accent-color);
+  border-color: var(--accent-color);
+  background-image: url('../images/iconf.svg#icon-check');
+  background-size: contain;
+  background-origin: border-box;
+} */
+
+/* .checkbox-icon{
+  display: inline-block;
+  margin-right: 8px;
+
+  width: 16px;
+  height: 15px;
+  border: 2px solid var(--primary-text-color);
+  border-radius: 2px;
+} */
+
+.checkbox:checked + .checkbox-icon {
+  background-color: var(--accent-color);
+  border: none;
+
+  background-size: contain;
+  background-origin: border-box;
+}
+
+
+.checkbox-icon{
+  display: inline-block;
+  margin-right: 8px;
+
+  border: 2px solid var(--primary-text-color);
+  border-radius: 2px;
+
+    transition-duration: 250ms;
+      transition-property: background-color;
+      animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
 .checkbox-label a {
+  margin-left: 4px;
+
   color: var(--accent-color);
-   text-decoration: none;
-   border-bottom: 1px solid var(--accent-color);
-   display: inline-block;
-  line-height: 0.75;
+  text-decoration-skip-ink:  none;
+
 }
 
 .button.form-send{
